--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-redux": "^7.1.5",
     "graphql": "^14.5.8",
     "isomorphic-fetch": "^2.2.1",
+    "moment": "^2.29.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
@@ -17,10 +18,11 @@
     "react-toastify": "^5.4.0",
     "react-use": "^13.6.3",
     "rebound": "^0.1.0",
+    "recharts": "^2.0.10",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.1",
     "redux-starter-kit": "^1.0.1",
-    "typescript": "^3.7.2",
+    "typescript": "^3.8.3",
     "urql": "^1.6.3"
   },
   "scripts": {
