--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "redux": "^4.0.4",
     "redux-saga": "^1.1.1",
     "redux-starter-kit": "^1.0.1",
+    "subscriptions-transport-ws": "^0.9.19",
     "typescript": "^3.8.3",
     "urql": "^1.6.3"
   },
